frontend/kuber-deploy/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort # Cluster IP para comunicacino interna... si se cambia a nodePort se debe utilizar nodeport que esta abajo
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32000
