frontend/kuber-deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  #ingressClassName: nginx
  rules:
    - host: re-start.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
                service:
                  name: frontend-service
                  port:
                    number: 80
          - path: /api/random
            pathType: Prefix
            backend:
                service:
                   name: backend-service
                   port:
                     number: 80
